--- a/app/version.properties
+++ b/app/version.properties
@@ -1,4 +1,4 @@
-#Mon Apr 30 01:21:47 BST 2018
-VERSION_BUILD=1402
+#Sat Nov 14 02:43:40 IST 2020
+VERSION_BUILD=1403
 VERSION_PATCH=2
 VERSION_CODE=21
